# libjxl

./: .clang-format  .gitmodules  CMakeLists.txt  pxentropy.py
lib/jxl/: dec_ans.cc  dec_ans.h  dec_file.cc  dec_frame.cc  dec_frame.h  dec_huffman.cc  dec_huffman.h  dec_modular.cc  dec_modular.h  decode.cc  enc_cache.cc  enc_modular.cc  enc_patch_dictionary.cc  modular_test.cc
lib/jxl/modular/: modular_image.cc  modular_image.h
lib/jxl/modular/encoding/: context_predict.h  dec_ma.cc  enc_encoding.cc  enc_encoding.h  encoding.cc  encoding.h
research/: CMakeLists.txt  benchmark_random_decode_main.cc  cocbo.cc  cocbo.h  common_cluster.cc  common_cluster.h  cost_graph.cc  cost_graph.h  cost_graph_enc.cc  cost_graph_enc_main.cc  cost_graph_main.cc  cost_graph_props.cc  cost_graph_random.cc  cost_graph_util.h  cost_graph_y.cc  dec_cluster.cc  dec_cluster.h  dec_flif.cc  dec_flif.h  dec_jxl_multi.cc  dec_jxl_multi.h  enc.h  enc_all.cc  enc_all.h  enc_all_main.cc  enc_avg_main.cc  enc_brute_force.cc  enc_brute_force.h  enc_brute_force_main.cc  enc_cluster.cc  enc_cluster.h  enc_cluster_main.cc  enc_flif.cc  enc_flif.h  enc_jxl_multi.cc  enc_jxl_multi.h  enc_without_header_main.cc  fields.cc  fields.h  images_provider.cc  (+14 more)
research/flif/: README.md  common.cpp  common.hpp  config.h  fileio.hpp  flif-dec.cpp  flif-enc.cpp  flif.cpp
research/flif/image/: image.hpp
research/flif/maniac/: compound.hpp  symbol.hpp
tools/: cjxl.cc
